src/objects/Social_media_data__c.object
<CustomObject>
    <fields>
        <fullName>Compound_Id__c</fullName>
        <externalId>true</externalId>
        <label>Compound Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OAuth service</label>
        <referenceTo>OAuthService__c</referenceTo>
        <relationshipLabel>Social media data</relationshipLabel>
        <relationshipName>Social_media_data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_likes__c</fullName>
        <label>Number of likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_member__c</fullName>
        <label>Number of member</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_unik_visitor__c</fullName>
        <label>Number of unik visitor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Socialmedia_Settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Socialmedia Settings</label>
        <referenceTo>socialmedia_settings__c</referenceTo>
        <relationshipLabel>Social media data</relationshipLabel>
        <relationshipName>Social_media_data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Social media data</label>
    <nameField>
        <label>Social media name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social media data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>